ADD_EXECUTABLE(liblog-base base.c)
TARGET_LINK_LIBRARIES(liblog-base log ase)
ADD_TEST(NAME liblog-base COMMAND ${WRAP_CMD} ./liblog-base)
SET_TESTS_PROPERTIES(liblog-base PROPERTIES FAIL_REGULAR_EXPRESSION "reachable")
#TARGET_COMPILE_OPTIONS(liblog-base PRIVATE "-DLOG_USE_THREAD=0" "-DLOG_USE_FILENO=0")

ADD_EXECUTABLE(liblog-basic logger.c)
TARGET_LINK_LIBRARIES(liblog-basic log ase)
ADD_TEST(NAME liblog-basic COMMAND ${WRAP_CMD} ./liblog-basic)
SET_TESTS_PROPERTIES(liblog-basic PROPERTIES FAIL_REGULAR_EXPRESSION "reachable")
